--- a/PersonalProfile/PerPro.css
+++ b/PersonalProfile/PerPro.css
@@ -9,7 +9,15 @@ p.Header
 {
 	color: #000000;
 	font-size: 2.2em;
-	font-family: Georgia, Serif;
+	font-family: "Times New Roman", Serif;
+	position: relative;
+	left: 20px;
+}
+p.subHeader
+{
+	color:#000;
+	font-size: 1.8em;
+	font-family: "Times New Roman", Serif;
 }
 a
 {
@@ -27,6 +35,7 @@ body
 	background-image: url(Fencing.jpg);
 	background-size: 100%;
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-attachment:fixed;
 	background-color: rgb(202,204,203);
+	background-attachment: scroll;
 }
